# whatsapp-dashboard

./: .gitignore  NEW_VISUALIZATIONS.md  README.md  database.py  hello.py  main.py  pyproject.toml  requirements.txt
api/: analysis.py  export.py  upload.py
frontend/: index.html
frontend/js/: api.js  app.js  charts.js  dashboard.js
frontend/styles/: components.css  main.css
models/: __init__.py  chat.py  message.py  participant.py
services/: analyzer.py  analyzer_clean.py  analyzer_extended.py  parser.py  visualizer.py
